--- a/Boto3/boto3_commands.ipynb
+++ b/Boto3/boto3_commands.ipynb
@@ -112,6 +112,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "899c7e64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a boto3 Session using explicit access and secret keys from fetch_credentials()\n",
+    "access_key, secret_key = fetch_credentials()[0], fetch_credentials()[1]\n",
+    "\n",
+    "aws_session = boto3.Session(\n",
+    "    aws_access_key_id=access_key,\n",
+    "    aws_secret_access_key=secret_key,\n",
+    "    region_name='us-east-1'\n",
+    ")\n",
+    "\n",
+    "# Example: create service clients from the session without overwriting existing globals\n",
+    "s3_from_session = aws_session.client('s3')\n",
+    "glue_from_session = aws_session.client('glue')\n",
+    "emr_from_session = aws_session.client('emr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59160cd2",
    "metadata": {},
    "outputs": [],
