--- a/Boto3/practical_boto3.ipynb
+++ b/Boto3/practical_boto3.ipynb
@@ -452,6 +452,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62aae78f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new AWS Glue crawler (uses existing `glue_client`, `bucket`, `crawler` and `crawlers` variables)\n",
+    "crawler_name = \"crawler_03\"\n",
+    "role = \"arn:aws:iam::180294202865:role/glue_role_to_give_full_access_to_s3\"\n",
+    "database_name = \"mydb_01\"\n",
+    "s3_target_path = f\"s3://{bucket['Name']}/raw_data/\"  # adjust path as needed\n",
+    "table_prefix = \"raw_\"\n",
+    "\n",
+    "# Check if crawler already exists in current session's crawlers list\n",
+    "if any(c.get(\"Name\") == crawler_name for c in crawlers):\n",
+    "    print(f\"Crawler '{crawler_name}' already exists.\")\n",
+    "else:\n",
+    "    try:\n",
+    "        response = glue_client.create_crawler(\n",
+    "            Name=crawler_name,\n",
+    "            Role=role,\n",
+    "            DatabaseName=database_name,\n",
+    "            Description=\"Crawler created via boto3 from Jupyter notebook\",\n",
+    "            Targets={\n",
+    "                \"S3Targets\": [\n",
+    "                    {\"Path\": s3_target_path}\n",
+    "                ]\n",
+    "            },\n",
+    "            TablePrefix=table_prefix,\n",
+    "            Classifiers=[],\n",
+    "            RecrawlPolicy={\"RecrawlBehavior\": \"CRAWL_EVERYTHING\"},\n",
+    "            SchemaChangePolicy={\n",
+    "                \"UpdateBehavior\": \"UPDATE_IN_DATABASE\",\n",
+    "                \"DeleteBehavior\": \"DEPRECATE_IN_DATABASE\"\n",
+    "            },\n",
+    "            Configuration='{\"Version\":1.0,\"CreatePartitionIndex\":true}'\n",
+    "        )\n",
+    "        print(f\"Crawler '{crawler_name}' created. Response HTTPStatusCode: {response.get('ResponseMetadata', {}).get('HTTPStatusCode')}\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Failed to create crawler:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1099861d",
    "metadata": {},
    "outputs": [],
