--- a/Practice/data_pipeline.ipynb
+++ b/Practice/data_pipeline.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "aae12ec4",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "'s3://golu-aws-project-bucket/raw/customers/customers.csv'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,6 +137,200 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adf43862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "import logging\n",
+    "import boto3\n",
+    "\n",
+    "# Initialize S3 client\n",
+    "s3_client = boto3.client('s3', region_name='us-east-1')  # Change to your region\n",
+    "\n",
+    "def extract_rds_postgres_to_s3(\n",
+    "        table_name,\n",
+    "        schema=\"public\",\n",
+    "        where_clause=None,\n",
+    "        partition_date=None,\n",
+    "        rds_config=None,\n",
+    "        storage_class='STANDARD_IA'  # Options: STANDARD, INTELLIGENT_TIERING, STANDARD_IA, ONEZONE_IA, GLACIER, DEEP_ARCHIVE\n",
+    "    ):\n",
+    "\n",
+    "    # RDS PostgreSQL configuration\n",
+    "    rds_config = rds_config or {\n",
+    "        'host': 'your-rds-instance.xxxxxxxxx.us-east-1.rds.amazonaws.com',  # RDS endpoint\n",
+    "        'port': '5432',\n",
+    "        'user': 'postgres',  # Master username\n",
+    "        'password': 'YourStrongPassword123!',  # Master password\n",
+    "        'database': 'kaggle_practice'  # Database name\n",
+    "    }\n",
+    "\n",
+    "    bucket = 'golu-aws-project-bucket'\n",
+    "\n",
+    "    # Configure logging\n",
+    "    logging.basicConfig(\n",
+    "        level=logging.INFO,\n",
+    "        format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    "    )\n",
+    "\n",
+    "    conn = None\n",
+    "    try:\n",
+    "        # Connect to RDS PostgreSQL\n",
+    "        logging.info(f\"🔌 Connecting to RDS PostgreSQL: {rds_config['host']}\")\n",
+    "        conn = psycopg2.connect(\n",
+    "            host=rds_config['host'],\n",
+    "            port=rds_config['port'],\n",
+    "            user=rds_config['user'],\n",
+    "            password=rds_config['password'],\n",
+    "            database=rds_config['database'],\n",
+    "            connect_timeout=10  # Connection timeout in seconds\n",
+    "        )\n",
+    "        logging.info(\"✅ Successfully connected to RDS\")\n",
+    "\n",
+    "        # Build query\n",
+    "        query = f\"SELECT * FROM {schema}.{table_name}\"\n",
+    "        if where_clause:\n",
+    "            query += f\" WHERE {where_clause}\"\n",
+    "\n",
+    "        logging.info(f\"📊 Running query: {query}\")\n",
+    "\n",
+    "        # Execute query and load into DataFrame\n",
+    "        df = pd.read_sql(query, conn)\n",
+    "        \n",
+    "        if df.empty:\n",
+    "            logging.warning(\"⚠️ No data found for the given query.\")\n",
+    "            return None\n",
+    "\n",
+    "        logging.info(f\"✅ Extracted {len(df)} rows and {len(df.columns)} columns\")\n",
+    "\n",
+    "        # Build S3 key path\n",
+    "        key = f\"raw/RDS/brazil_e_commerce/{table_name}\"\n",
+    "        if partition_date:\n",
+    "            key += f\"/dt={partition_date}\"\n",
+    "        key += f\"/{table_name}.csv\"\n",
+    "\n",
+    "        # Convert DataFrame to CSV in memory\n",
+    "        csv_buffer = StringIO()\n",
+    "        df.to_csv(csv_buffer, index=False)\n",
+    "\n",
+    "        logging.info(f\"📤 Uploading to S3 with storage class: {storage_class}\")\n",
+    "\n",
+    "        # Upload to S3 with specified storage class\n",
+    "        s3_client.put_object(\n",
+    "            Bucket=bucket,\n",
+    "            Key=key,\n",
+    "            Body=csv_buffer.getvalue(),\n",
+    "            StorageClass=storage_class,\n",
+    "            ServerSideEncryption='AES256',  # Enable encryption at rest\n",
+    "            Metadata={\n",
+    "                'source': 'rds-postgresql',\n",
+    "                'table': table_name,\n",
+    "                'schema': schema,\n",
+    "                'extracted_rows': str(len(df))\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "        s3_uri = f\"s3://{bucket}/{key}\"\n",
+    "        logging.info(f\"✅ Successfully uploaded to: {s3_uri}\")\n",
+    "        logging.info(f\"📦 Storage Class: {storage_class}\")\n",
+    "        logging.info(f\"📏 File size: {len(csv_buffer.getvalue())} bytes\")\n",
+    "        \n",
+    "        return s3_uri\n",
+    "\n",
+    "    except psycopg2.OperationalError as e:\n",
+    "        logging.error(f\"❌ Database connection failed: {e}\")\n",
+    "        logging.error(\"Check: 1) RDS endpoint, 2) Security group rules, 3) DB credentials\")\n",
+    "        raise\n",
+    "    \n",
+    "    except psycopg2.Error as e:\n",
+    "        logging.error(f\"❌ Database error: {e}\")\n",
+    "        raise\n",
+    "    \n",
+    "    except boto3.exceptions.Boto3Error as e:\n",
+    "        logging.error(f\"❌ S3 upload failed: {e}\")\n",
+    "        raise\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"❌ Unexpected error: {e}\")\n",
+    "        raise\n",
+    "    \n",
+    "    finally:\n",
+    "        if conn:\n",
+    "            conn.close()\n",
+    "            logging.info(\"🔌 Database connection closed\")\n",
+    "\n",
+    "\n",
+    "# ============================================================\n",
+    "# USAGE EXAMPLES\n",
+    "# ============================================================\n",
+    "\n",
+    "# Example 1: Basic extraction\n",
+    "try:\n",
+    "    s3_uri = extract_rds_postgres_to_s3(\n",
+    "        table_name=\"customers\",\n",
+    "        schema=\"olist_brazil_e_commerce\"\n",
+    "    )\n",
+    "    print(f\"Data uploaded to: {s3_uri}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Extraction failed: {e}\")\n",
+    "\n",
+    "# Example 2: With date filter and partition\n",
+    "try:\n",
+    "    s3_uri = extract_rds_postgres_to_s3(\n",
+    "        table_name=\"orders\",\n",
+    "        schema=\"olist_brazil_e_commerce\",\n",
+    "        where_clause=\"order_purchase_timestamp >= '2025-01-01'\",\n",
+    "        partition_date=\"2025-01-01\",\n",
+    "        storage_class='INTELLIGENT_TIERING'  # Auto-optimize storage costs\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(f\"Extraction failed: {e}\")\n",
+    "\n",
+    "# Example 3: With custom RDS config\n",
+    "custom_rds_config = {\n",
+    "    'host': 'prod-rds.xxxxxxxxx.us-east-1.rds.amazonaws.com',\n",
+    "    'port': '5432',\n",
+    "    'user': 'admin',\n",
+    "    'password': 'SecurePassword123!',\n",
+    "    'database': 'production_db'\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    s3_uri = extract_rds_postgres_to_s3(\n",
+    "        table_name=\"customers\",\n",
+    "        schema=\"olist_brazil_e_commerce\",\n",
+    "        rds_config=custom_rds_config,\n",
+    "        storage_class='GLACIER'  # Long-term archival\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(f\"Extraction failed: {e}\")\n",
+    "\n",
+    "# Example 4: Extract multiple tables\n",
+    "tables = ['customers', 'orders', 'order_items', 'products', 'sellers']\n",
+    "\n",
+    "for table in tables:\n",
+    "    try:\n",
+    "        logging.info(f\"\\n{'='*60}\")\n",
+    "        logging.info(f\"Processing table: {table}\")\n",
+    "        logging.info(f\"{'='*60}\")\n",
+    "        \n",
+    "        s3_uri = extract_rds_postgres_to_s3(\n",
+    "            table_name=table,\n",
+    "            schema=\"olist_brazil_e_commerce\",\n",
+    "            storage_class='STANDARD_IA'\n",
+    "        )\n",
+    "        logging.info(f\"✅ {table} completed successfully\\n\")\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"❌ {table} failed: {e}\\n\")\n",
+    "        continue"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f0a8ffae",
    "metadata": {},
@@ -146,18 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "cd5a5c77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crawler 'crawler_07' created. Response HTTPStatusCode: 200\n"
+     ]
+    }
+   ],
    "source": [
     "# Create Glue Crawler\n",
     "\n",
-    "crawler_name = \"crawler_03\"\n",
+    "crawler_name = \"crawler_07\"\n",
     "role = \"arn:aws:iam::180294202865:role/glue_role_to_give_full_access_to_s3\"\n",
     "database_name = \"mydb_01\"\n",
     "s3_target_path = f\"s3://golu-aws-project-bucket/raw/customers/\"  # adjust path as needed\n",
-    "table_prefix = \"raw_\"\n",
+    "table_prefix = \"raw2_\"\n",
     "\n",
     "\n",
     "try:\n",
@@ -187,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "id": "e4e754ec",
    "metadata": {},
    "outputs": [
@@ -198,7 +400,10 @@
       "Crawler Name: CRAWLER_04, Crawler State: READY\n",
       "Crawler Name: crawler_01, Crawler State: READY\n",
       "Crawler Name: crawler_02, Crawler State: READY\n",
-      "Crawler Name: crawler_03, Crawler State: STOPPING\n"
+      "Crawler Name: crawler_03, Crawler State: READY\n",
+      "Crawler Name: crawler_06, Crawler State: READY\n",
+      "Crawler Name: crawler_07, Crawler State: READY\n",
+      "Crawler Name: crawler_refined_03, Crawler State: READY\n"
      ]
     }
    ],
@@ -212,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "c9efe37b",
    "metadata": {},
    "outputs": [
@@ -220,19 +425,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ResponseMetadata': {'RequestId': '909f9d4e-68c9-4714-9919-064fc941a933', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Tue, 04 Nov 2025 18:11:12 GMT', 'content-type': 'application/x-amz-json-1.1', 'content-length': '2', 'connection': 'keep-alive', 'x-amzn-requestid': '909f9d4e-68c9-4714-9919-064fc941a933', 'cache-control': 'no-cache'}, 'RetryAttempts': 0}}\n"
+      "{'ResponseMetadata': {'RequestId': '7f42fe9a-bb1e-4190-9663-1dc2bcf9bdb7', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Thu, 06 Nov 2025 10:29:17 GMT', 'content-type': 'application/x-amz-json-1.1', 'content-length': '2', 'connection': 'keep-alive', 'x-amzn-requestid': '7f42fe9a-bb1e-4190-9663-1dc2bcf9bdb7', 'cache-control': 'no-cache'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
    "source": [
     "# Start the crawler\n",
-    "response = glue_client.start_crawler(Name='crawler_03')\n",
+    "response = glue_client.start_crawler(Name='crawler_07')\n",
     "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "id": "79d259a0",
    "metadata": {},
    "outputs": [
@@ -240,7 +445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Crawler State: RUNNING\n"
+      "Current Crawler State: READY\n"
      ]
     }
    ],
@@ -260,31 +465,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "874bf876",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Upload Glue Job Script to S3 \n",
-    "s3_client.upload_file(r\"/Users/pavanhalde/Downloads/glue_job_05.py\", 'golu-aws-project-bucket', 'scripts/glue_job_05.py')\n",
+    "s3_client.upload_file(r\"/Users/pavanhalde/Downloads/glue_job_07.py\", 'golu-aws-project-bucket', 'scripts/glue_job_07.py')\n",
     "\n",
     "# Note: In industry we use CI/CD pipelines to automate such tasks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "f8da85c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create Glue Job \n",
     "response = glue_client.create_job(\n",
-    "    Name=\"glue_job_05\",\n",
+    "    Name=\"glue_job_07\",\n",
     "    Role=\"arn:aws:iam::180294202865:role/glue_role_to_give_full_access_to_s3\",\n",
     "    Command={\n",
     "        'Name': 'glueetl',\n",
-    "        'ScriptLocation': \"s3://golu-aws-project-bucket/scripts/glue_job_05.py\"\n",
+    "        'ScriptLocation': \"s3://golu-aws-project-bucket/scripts/glue_job_07.py\"\n",
     "    },\n",
     "    GlueVersion='4.0',\n",
     "    WorkerType='G.1X',\n",
@@ -297,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "9dc6dc41",
    "metadata": {},
    "outputs": [
@@ -309,7 +514,9 @@
       "Job Name: glue_job_02\n",
       "Job Name: glue_job_03\n",
       "Job Name: glue_job_04\n",
-      "Job Name: glue_job_05\n"
+      "Job Name: glue_job_05\n",
+      "Job Name: glue_job_06\n",
+      "Job Name: glue_job_07\n"
      ]
     }
    ],
@@ -323,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "64a37ed3",
    "metadata": {},
    "outputs": [
@@ -331,20 +538,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job run started with ID: jr_a95c6dc727d516ba5bbddf15684e532e6d7583d7f68ba3265461774d9724ea72\n"
+      "Job run started with ID: jr_6129933cc70187784ab134707c1109656a01e0e399abb147d0ac8eeb9aebeafb\n"
      ]
     }
    ],
    "source": [
     "# Start Job Run ::\n",
-    "response = glue_client.start_job_run(JobName='glue_job_05')\n",
+    "response = glue_client.start_job_run(JobName='glue_job_07')\n",
     "job_run_id = response['JobRunId']\n",
     "print(f\"Job run started with ID: {job_run_id}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "3bbe5aa9",
    "metadata": {},
    "outputs": [
@@ -358,7 +565,7 @@
    ],
    "source": [
     "# Get Job Run::\n",
-    "response = glue_client.get_job_run(JobName='glue_job_05', RunId=job_run_id)\n",
+    "response = glue_client.get_job_run(JobName='glue_job_07', RunId=job_run_id)\n",
     "job_run = response['JobRun']\n",
     "print(f\"Job Run Status: {job_run['JobRunState']}\")\n"
    ]
@@ -373,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "id": "13e5bede",
    "metadata": {},
    "outputs": [
@@ -381,14 +588,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Crawler 'crawler_refined_03' created. Response HTTPStatusCode: 200\n"
+      "Crawler 'crawler_refined_04' created. Response HTTPStatusCode: 200\n"
      ]
     }
    ],
    "source": [
     "# Create Glue Crawler\n",
     "\n",
-    "crawler_name = \"crawler_refined_03\"\n",
+    "crawler_name = \"crawler_refined_04\"\n",
     "role = \"arn:aws:iam::180294202865:role/glue_role_to_give_full_access_to_s3\"\n",
     "database_name = \"mydb_01\"\n",
     "s3_target_path = f\"s3://golu-aws-project-bucket/output/brazil_e_commerce/customer_refined/\" \n",
@@ -422,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "id": "ac084e84",
    "metadata": {},
    "outputs": [
@@ -434,7 +641,10 @@
       "Crawler Name: crawler_01, Crawler State: READY\n",
       "Crawler Name: crawler_02, Crawler State: READY\n",
       "Crawler Name: crawler_03, Crawler State: READY\n",
-      "Crawler Name: crawler_refined_03, Crawler State: READY\n"
+      "Crawler Name: crawler_06, Crawler State: READY\n",
+      "Crawler Name: crawler_07, Crawler State: READY\n",
+      "Crawler Name: crawler_refined_03, Crawler State: READY\n",
+      "Crawler Name: crawler_refined_04, Crawler State: READY\n"
      ]
     }
    ],
@@ -448,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "id": "44a52694",
    "metadata": {},
    "outputs": [
@@ -456,19 +666,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ResponseMetadata': {'RequestId': '1a2e7264-617f-43f5-8238-e055d745a0b3', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Tue, 04 Nov 2025 18:33:20 GMT', 'content-type': 'application/x-amz-json-1.1', 'content-length': '2', 'connection': 'keep-alive', 'x-amzn-requestid': '1a2e7264-617f-43f5-8238-e055d745a0b3', 'cache-control': 'no-cache'}, 'RetryAttempts': 0}}\n"
+      "{'ResponseMetadata': {'RequestId': '9d37261e-c734-4df7-93a9-68cb00154164', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Thu, 06 Nov 2025 11:00:02 GMT', 'content-type': 'application/x-amz-json-1.1', 'content-length': '2', 'connection': 'keep-alive', 'x-amzn-requestid': '9d37261e-c734-4df7-93a9-68cb00154164', 'cache-control': 'no-cache'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
    "source": [
     "# Start the crawler\n",
-    "response = glue_client.start_crawler(Name='crawler_refined_03')\n",
+    "response = glue_client.start_crawler(Name='crawler_refined_04')\n",
     "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "b1aeafd3",
    "metadata": {},
    "outputs": [
@@ -476,7 +686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Crawler State: RUNNING\n"
+      "Current Crawler State: READY\n"
      ]
     }
    ],
@@ -496,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "id": "5cacb3a5",
    "metadata": {},
    "outputs": [
@@ -511,7 +721,7 @@
     }
    ],
    "source": [
-    "import boto3\n",
+    "\n",
     "import time\n",
     "\n",
     "\n",
@@ -519,7 +729,7 @@
     "WORKGROUP       = \"primary\"\n",
     "OUTPUT_LOCATION = \"s3://golu-aws-project-bucket/athena-results/\"  # For Athena query results only\n",
     "DATABASE        = \"mydb_01\"  # Your Glue database name\n",
-    "RAW_TABLE       = \"raw_customers\"  # Original raw table\n",
+    "RAW_TABLE       = \"raw2_customers\"  # Original raw table\n",
     "REFINED_TABLE   = \"refined_customer_refined\"  # Table created by crawler (with prefix)\n",
     "\n",
     "print(\"=\" * 60)\n",
@@ -577,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "id": "60a59376",
    "metadata": {},
    "outputs": [
@@ -594,7 +804,7 @@
       "    CASE \n",
       "        WHEN customer_city = UPPER(customer_city) THEN 'PASS - All Uppercase'\n",
       "   ...\n",
-      "Query ID: 750d312c-7413-40df-ac17-697b4edd20d8\n",
+      "Query ID: a5dba1a4-b501-4f8e-b90f-0027ab6511b7\n",
       "⏳ Waiting for query to complete....\n",
       "Status: SUCCEEDED\n",
       "\n",
@@ -611,7 +821,7 @@
        "[['PASS - All Uppercase', '41746']]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
