added code to extract data from RDS and load into S3

--- a/Practice/data_pipeline.ipynb
+++ b/Practice/data_pipeline.ipynb
@@ -138,36 +138,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "adf43862",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysql-connector-python\n",
+      "  Downloading mysql_connector_python-9.5.0-cp313-cp313-macosx_14_0_arm64.whl.metadata (7.5 kB)\n",
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (2.3.3)\n",
+      "Requirement already satisfied: boto3 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (1.40.64)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/pavanhalde/Library/Python/3.13/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: botocore<1.41.0,>=1.40.64 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from boto3) (1.40.64)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.15.0,>=0.14.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from boto3) (0.14.0)\n",
+      "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from botocore<1.41.0,>=1.40.64->boto3) (2.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/pavanhalde/Library/Python/3.13/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading mysql_connector_python-9.5.0-cp313-cp313-macosx_14_0_arm64.whl (17.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.6/17.6 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
+      "Successfully installed mysql-connector-python-9.5.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "import psycopg2\n",
+    "%pip install mysql-connector-python pandas boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed5c6ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:🔌 Connecting to RDS MySQL: brazil-e-commerce-1.cc76oy40c2av.us-east-1.rds.amazonaws.com\n",
+      "INFO:root:✅ Successfully connected to RDS\n",
+      "INFO:root:📊 Running query: SELECT * FROM `brazil_e_commerce`.`customers`\n",
+      "/var/folders/19/6l7wlwds1jv0rjylrz6p14yc0000gn/T/ipykernel_56279/4101936317.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n",
+      "INFO:root:✅ Extracted 99441 rows and 6 columns\n",
+      "INFO:root:📤 Uploading to S3 with storage class: STANDARD_IA\n",
+      "INFO:root:✅ Successfully uploaded to: s3://golu-aws-project-bucket/raw/RDS/brazil_e_commerce/customers/customers.csv\n",
+      "INFO:root:📦 Storage Class: STANDARD_IA\n",
+      "INFO:root:📏 File size: 8685717 bytes\n",
+      "INFO:root:🔌 Database connection closed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data uploaded to: s3://golu-aws-project-bucket/raw/RDS/brazil_e_commerce/customers/customers.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mysql.connector\n",
     "import pandas as pd\n",
     "from io import StringIO\n",
     "import logging\n",
     "import boto3\n",
     "\n",
-    "# Initialize S3 client\n",
-    "s3_client = boto3.client('s3', region_name='us-east-1')  # Change to your region\n",
     "\n",
-    "def extract_rds_postgres_to_s3(\n",
+    "\n",
+    "def extract_rds_mysql_to_s3(\n",
     "        table_name,\n",
-    "        schema=\"public\",\n",
+    "        database=None,\n",
     "        where_clause=None,\n",
     "        partition_date=None,\n",
     "        rds_config=None,\n",
     "        storage_class='STANDARD_IA'  # Options: STANDARD, INTELLIGENT_TIERING, STANDARD_IA, ONEZONE_IA, GLACIER, DEEP_ARCHIVE\n",
     "    ):\n",
     "\n",
-    "    # RDS PostgreSQL configuration\n",
+    "    # RDS MySQL configuration\n",
     "    rds_config = rds_config or {\n",
-    "        'host': 'your-rds-instance.xxxxxxxxx.us-east-1.rds.amazonaws.com',  # RDS endpoint\n",
-    "        'port': '5432',\n",
-    "        'user': 'postgres',  # Master username\n",
-    "        'password': 'YourStrongPassword123!',  # Master password\n",
-    "        'database': 'kaggle_practice'  # Database name\n",
+    "        'host': 'brazil-e-commerce-1.cc76oy40c2av.us-east-1.rds.amazonaws.com',  # Your RDS endpoint\n",
+    "        'port': 3306,\n",
+    "        'user': 'admin',  # Your master username\n",
+    "        'password': '',  # Your master password\n",
+    "        'database': 'brazil_e_commerce'  # Your database name\n",
     "    }\n",
     "\n",
     "    bucket = 'golu-aws-project-bucket'\n",
@@ -180,20 +242,21 @@
     "\n",
     "    conn = None\n",
     "    try:\n",
-    "        # Connect to RDS PostgreSQL\n",
-    "        logging.info(f\"🔌 Connecting to RDS PostgreSQL: {rds_config['host']}\")\n",
-    "        conn = psycopg2.connect(\n",
+    "        # Connect to RDS MySQL\n",
+    "        logging.info(f\"🔌 Connecting to RDS MySQL: {rds_config['host']}\")\n",
+    "        conn = mysql.connector.connect(\n",
     "            host=rds_config['host'],\n",
     "            port=rds_config['port'],\n",
     "            user=rds_config['user'],\n",
     "            password=rds_config['password'],\n",
     "            database=rds_config['database'],\n",
-    "            connect_timeout=10  # Connection timeout in seconds\n",
+    "            connection_timeout=10  # Connection timeout in seconds\n",
     "        )\n",
     "        logging.info(\"✅ Successfully connected to RDS\")\n",
     "\n",
-    "        # Build query\n",
-    "        query = f\"SELECT * FROM {schema}.{table_name}\"\n",
+    "        # Build query - MySQL uses backticks for identifiers with special chars\n",
+    "        db_prefix = f\"`{database or rds_config['database']}`.\"\n",
+    "        query = f\"SELECT * FROM {db_prefix}`{table_name}`\"\n",
     "        if where_clause:\n",
     "            query += f\" WHERE {where_clause}\"\n",
     "\n",
@@ -228,9 +291,9 @@
     "            StorageClass=storage_class,\n",
     "            ServerSideEncryption='AES256',  # Enable encryption at rest\n",
     "            Metadata={\n",
-    "                'source': 'rds-postgresql',\n",
+    "                'source': 'rds-mysql',\n",
     "                'table': table_name,\n",
-    "                'schema': schema,\n",
+    "                'database': database or rds_config['database'],\n",
     "                'extracted_rows': str(len(df))\n",
     "            }\n",
     "        )\n",
@@ -242,13 +305,9 @@
     "        \n",
     "        return s3_uri\n",
     "\n",
-    "    except psycopg2.OperationalError as e:\n",
-    "        logging.error(f\"❌ Database connection failed: {e}\")\n",
-    "        logging.error(\"Check: 1) RDS endpoint, 2) Security group rules, 3) DB credentials\")\n",
-    "        raise\n",
-    "    \n",
-    "    except psycopg2.Error as e:\n",
+    "    except mysql.connector.Error as e:\n",
     "        logging.error(f\"❌ Database error: {e}\")\n",
+    "        logging.error(\"Check: 1) RDS endpoint, 2) Security group rules, 3) DB credentials\")\n",
     "        raise\n",
     "    \n",
     "    except boto3.exceptions.Boto3Error as e:\n",
@@ -260,7 +319,7 @@
     "        raise\n",
     "    \n",
     "    finally:\n",
-    "        if conn:\n",
+    "        if conn and conn.is_connected():\n",
     "            conn.close()\n",
     "            logging.info(\"🔌 Database connection closed\")\n",
     "\n",
@@ -269,65 +328,61 @@
     "# USAGE EXAMPLES\n",
     "# ============================================================\n",
     "\n",
-    "# Example 1: Basic extraction\n",
+    "# Example 1: Extract customers table from your RDS\n",
     "try:\n",
-    "    s3_uri = extract_rds_postgres_to_s3(\n",
-    "        table_name=\"customers\",\n",
-    "        schema=\"olist_brazil_e_commerce\"\n",
+    "    s3_uri = extract_rds_mysql_to_s3(\n",
+    "        table_name=\"customers\"\n",
     "    )\n",
     "    print(f\"Data uploaded to: {s3_uri}\")\n",
     "except Exception as e:\n",
     "    print(f\"Extraction failed: {e}\")\n",
     "\n",
-    "# Example 2: With date filter and partition\n",
-    "try:\n",
-    "    s3_uri = extract_rds_postgres_to_s3(\n",
-    "        table_name=\"orders\",\n",
-    "        schema=\"olist_brazil_e_commerce\",\n",
-    "        where_clause=\"order_purchase_timestamp >= '2025-01-01'\",\n",
-    "        partition_date=\"2025-01-01\",\n",
-    "        storage_class='INTELLIGENT_TIERING'  # Auto-optimize storage costs\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(f\"Extraction failed: {e}\")\n",
+    "# # Example 2: With date filter and partition (if you have date columns)\n",
+    "# try:\n",
+    "#     s3_uri = extract_rds_mysql_to_s3(\n",
+    "#         table_name=\"customers\",\n",
+    "#         where_clause=\"customer_state = 'SP'\",\n",
+    "#         partition_date=\"2025-11-08\",\n",
+    "#         storage_class='INTELLIGENT_TIERING'  # Auto-optimize storage costs\n",
+    "#     )\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Extraction failed: {e}\")\n",
     "\n",
-    "# Example 3: With custom RDS config\n",
-    "custom_rds_config = {\n",
-    "    'host': 'prod-rds.xxxxxxxxx.us-east-1.rds.amazonaws.com',\n",
-    "    'port': '5432',\n",
-    "    'user': 'admin',\n",
-    "    'password': 'SecurePassword123!',\n",
-    "    'database': 'production_db'\n",
-    "}\n",
+    "# # Example 3: With custom RDS config\n",
+    "# custom_rds_config = {\n",
+    "#     'host': 'brazil-e-commerce-1.cc76oy40c2av.us-east-1.rds.amazonaws.com',\n",
+    "#     'port': 3306,\n",
+    "#     'user': 'admin',\n",
+    "#     'password': '',\n",
+    "#     'database': 'brazil_e_commerce'\n",
+    "# }\n",
     "\n",
-    "try:\n",
-    "    s3_uri = extract_rds_postgres_to_s3(\n",
-    "        table_name=\"customers\",\n",
-    "        schema=\"olist_brazil_e_commerce\",\n",
-    "        rds_config=custom_rds_config,\n",
-    "        storage_class='GLACIER'  # Long-term archival\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(f\"Extraction failed: {e}\")\n",
+    "# try:\n",
+    "#     s3_uri = extract_rds_mysql_to_s3(\n",
+    "#         table_name=\"customers\",\n",
+    "#         rds_config=custom_rds_config,\n",
+    "#         storage_class='STANDARD_IA'\n",
+    "#     )\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Extraction failed: {e}\")\n",
     "\n",
-    "# Example 4: Extract multiple tables\n",
-    "tables = ['customers', 'orders', 'order_items', 'products', 'sellers']\n",
+    "# # Example 4: Extract multiple tables (when you have more tables)\n",
+    "# tables = ['olist_customers_dataset', 'orders', 'order_items', 'products', 'sellers']\n",
     "\n",
-    "for table in tables:\n",
-    "    try:\n",
-    "        logging.info(f\"\\n{'='*60}\")\n",
-    "        logging.info(f\"Processing table: {table}\")\n",
-    "        logging.info(f\"{'='*60}\")\n",
+    "# for table in tables:\n",
+    "#     try:\n",
+    "#         logging.info(f\"\\n{'='*60}\")\n",
+    "#         logging.info(f\"Processing table: {table}\")\n",
+    "#         logging.info(f\"{'='*60}\")\n",
     "        \n",
-    "        s3_uri = extract_rds_postgres_to_s3(\n",
-    "            table_name=table,\n",
-    "            schema=\"olist_brazil_e_commerce\",\n",
-    "            storage_class='STANDARD_IA'\n",
-    "        )\n",
-    "        logging.info(f\"✅ {table} completed successfully\\n\")\n",
-    "    except Exception as e:\n",
-    "        logging.error(f\"❌ {table} failed: {e}\\n\")\n",
-    "        continue"
+    "#         s3_uri = extract_rds_mysql_to_s3(\n",
+    "#             table_name=table,\n",
+    "#             storage_class='STANDARD_IA'\n",
+    "#         )\n",
+    "#         logging.info(f\"✅ {table} completed successfully\\n\")\n",
+    "#     except Exception as e:\n",
+    "#         logging.error(f\"❌ {table} failed: {e}\\n\")\n",
+    "#         continue"
    ]
   },
   {
