partition pruning and predicate pushdown code

--- a/Practice/data_pipeline.ipynb
+++ b/Practice/data_pipeline.ipynb
@@ -175,36 +175,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ed5c6ffd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:🔌 Connecting to RDS MySQL: brazil-e-commerce-1.cc76oy40c2av.us-east-1.rds.amazonaws.com\n",
-      "INFO:root:✅ Successfully connected to RDS\n",
-      "INFO:root:📊 Running query: SELECT * FROM `brazil_e_commerce`.`customers`\n",
-      "/var/folders/19/6l7wlwds1jv0rjylrz6p14yc0000gn/T/ipykernel_56279/4101936317.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, conn)\n",
-      "INFO:root:✅ Extracted 99441 rows and 6 columns\n",
-      "INFO:root:📤 Uploading to S3 with storage class: STANDARD_IA\n",
-      "INFO:root:✅ Successfully uploaded to: s3://golu-aws-project-bucket/raw/RDS/brazil_e_commerce/customers/customers.csv\n",
-      "INFO:root:📦 Storage Class: STANDARD_IA\n",
-      "INFO:root:📏 File size: 8685717 bytes\n",
-      "INFO:root:🔌 Database connection closed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data uploaded to: s3://golu-aws-project-bucket/raw/RDS/brazil_e_commerce/customers/customers.csv\n"
-     ]
-    }
-   ],
+   "source": [
+    "RDS Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bf4430",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import mysql.connector\n",
     "import pandas as pd\n",
